--- a/common.css
+++ b/common.css
@@ -1,4 +1,5 @@
-<style>
+    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Common CSS @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
+
     * {
         box-sizing: border-box;
     }
@@ -53,8 +54,7 @@
     }
 
 
-    body {
-        color: var(--black);
+    .mt2021 {
         font-size: 14px;
     }
 
@@ -67,67 +67,31 @@
     }
 
     html,
-    body,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        margin: 0;
+    .mt2021,
+    .mt2021 h1,
+    .mt2021 h2,
+    .mt2021 h3,
+    .mt2021 h4,
+    .mt2021 h5,
+    .mt2021 h6,
+    .mt2021 p {
         padding: 0;
+        color: var(--black);
     }
 
     .p-wrapper {
         max-width: 900px;
         margin: auto;
     }
-
-    p {
-        font-family: Montserrat;
-        font-style: normal;
-        font-weight: 300;
-        font-size: 17px;
-        line-height: 24px;
-        letter-spacing: 0.05em;
-        padding: 0 50px;
+    .mt2021 .text-white {
+        color: white;
     }
-
-
-
-    h1,
-    h3 {
-        font-family: Times New Roman;
-        font-style: normal;
-        font-weight: normal;
-        color: var(--black);
-    }
-
-    h1 {
-        font-size: 36px;
-        line-height: 46px;
+    .mt2021 h1,
+    .mt2021 p {
         letter-spacing: 0.05em;
     }
 
-    h3 {
-        font-size: 32px;
-        line-height: 37px;
-
-    }
-
-    h5 {
-        font-family: Montserrat;
-        font-weight: 300;
-        font-size: 22px;
-        line-height: 27px;
-
-    }
-
-    h6 {
-        font-size: 17px;
-    }
-
-    .btn {
+    .mt2021 .btn {
         font-size: 17px;
         line-height: 24px;
         font-weight: normal;
@@ -194,7 +158,7 @@
         padding-top: 8%;
     }
 
-    .row {
+    .mt2021 .row {
         display: flex;
     }
 
@@ -205,8 +169,6 @@
     .columns a {
         color: var(--black);
     }
-
-
 
     .flex-wrap {
         flex-wrap: wrap;
@@ -289,11 +251,11 @@
     }
 
     /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Owl Carousel @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-    .owl-item .item a:hover {
+    .mt2021 .owl-item .item a:hover {
         color: var(--black);
     }
 
-    .owl-carousel .owl-item {
+    .mt2021 .owl-carousel .owl-item {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -301,43 +263,43 @@
     }
 
 
-    .owl-carousel .owl-item img {
+    .mt2021 .owl-carousel .owl-item img {
         width: 100px;
         transition: all 1s;
     }
 
 
-    .owl-carousel .owl-item.center img {
+    .mt2021 .owl-carousel .owl-item.center img {
         width: 200px;
         margin: auto;
     }
 
-    .owl-carousel .owl-item.center {
+    .mt2021 .owl-carousel .owl-item.center {
         margin: 0px 20px;
     }
 
-    .owl-item article>a {
+    .mt2021 .owl-item article>a {
         display: none;
         font-weight: 500;
         text-transform: uppercase;
     }
 
-    .owl-item.center article>a {
+    .mt2021 .owl-item.center article>a {
         margin-top: 10px;
         display: block;
     }
 
-    .owl-carousel .owl-nav .owl-prev,
-    .owl-carousel .owl-nav .owl-next {
+    .mt2021 .owl-carousel .owl-nav .owl-prev,
+    .mt2021 .owl-carousel .owl-nav .owl-next {
         top: auto;
         bottom: -40px;
     }
 
-    .owl-carousel .owl-nav [class*='owl-']:before {
+    .mt2021 .owl-carousel .owl-nav [class*='owl-']:before {
         font-size: 40px;
     }
 
-    .owl-carousel .owl-item a img:hover {
+    .mt2021 .owl-carousel .owl-item a img:hover {
         filter: contrast(130%);
     }
 
@@ -349,52 +311,11 @@
         align-items: flex-start;
     }
 
-    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Old Page CSS @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-
-    .page-main {
-        padding: 0px;
-    }
-
-    .page-footer h5 {
-        font: 500 14px/1.35 Montserrat, Helvetica Neue, Verdana, Arial, sans-serif;
-        margin: 0 0 5px;
-    }
-
-    .nowrap {
-        white-space: nowrap;
-        word-break: keep-all;
-    }
-
-    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Medium Devices @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Medium Devices @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Medium Devices @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-
     @media (max-width: 1199.98px) {
-
-        h1 {
-            font-size: 30px;
-            line-height: 34px;
-        }
-
-        h3 {
-            font-size: 25px;
-            line-height: 29px;
-        }
-
-        h5 {
-            font-size: 18px;
-            line-height: 25px;
-        }
-
-        p {
-            font-size: 16px;
-            line-height: 22px;
-        }
 
         .diamond-image img {
             width: 320px;
         }
-
 
         .spinning-diamond {
             width: 380px;
@@ -406,15 +327,8 @@
             font-size: 12px;
         }
 
-        p {
-            padding: 0;
-        }
-
     }
 
-    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Small Devices @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Small Devices @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Small Devices @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
 
     @media (max-width: 767.98px) {
 
@@ -469,7 +383,7 @@
             padding-right: 13px;
         }
 
-        .btn {
+        .mt2021 .btn {
             font-size: 14px;
             line-height: 22px;
 
@@ -479,7 +393,7 @@
             margin-top: 1.2rem !important;
         }
 
-        .row {
+        .mt2021 .row {
             display: block;
         }
 
@@ -494,32 +408,11 @@
 
     }
 
-    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Mobile Phone @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Mobile Phone @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Mobile Phone @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
 
     @media (max-width: 480px) {
-        h1 {
-            font-size: 25px;
-            line-height: 29px;
-        }
 
-        h3 {
-            font-size: 20px;
-            line-height: 23px;
-        }
 
-        h5 {
-            font-size: 17px;
-            line-height: 20px;
-        }
-
-        p {
-            font-size: 14px;
-            line-height: 22px;
-        }
-
-        .btn {
+        .mt2021 .btn {
             font-size: 14px;
             line-height: 15px;
             /* height: 30px; */
@@ -537,16 +430,16 @@
             height: 200px;
         }
 
-        .owl-carousel .owl-item img {
+        .mt2021 .owl-carousel .owl-item img {
             width: 70px;
             transition: unset;
         }
 
-        .owl-carousel .owl-item.center img {
+        .mt2021 .owl-carousel .owl-item.center img {
             width: 150px;
         }
 
-        .owl-carousel .owl-item.center {
+        .mt2021 .owl-carousel .owl-item.center {
             margin: 0px 20px;
         }
 
@@ -573,4 +466,165 @@
         }
 
     }
-</style>
+
+    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Fonts @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
+    .font-weight-bold {
+        font-weight: 700;
+    }
+
+    .font-weight-normal {
+        font-weight: 400;
+    }
+
+    .font-weight-light {
+        font-weight: 300;
+    }
+
+    .mt2021 h1,
+    .mt2021 h2,
+    .mt2021 h4 {
+        font-family: 'Times New Roman';
+    }
+
+    .mt2021 h3,
+    .mt2021 h5,
+    .mt2021 h6,
+    .mt2021 p,
+    .mt2021 .h7,
+    .mt2021 .h8,
+    .mt2021 .h9,
+    .mt2021 .h10,
+    .mt2021 .h11,
+    .mt2021 .h12 {
+        font-family: 'Montserrat';
+    }
+
+    .mt2021 h1 {
+        font-size: 36px;
+    }
+
+    .mt2021 h2 {
+        font-size: 32px;
+    }
+
+    .mt2021 h3 {
+        font-size: 32px;
+    }
+
+    .mt2021 h4 {
+        font-size: 25px;
+    }
+
+    .mt2021 h5 {
+        font-size: 22px;
+    }
+
+    .mt2021 h6 {
+        font-size: 17px;
+    }
+
+    .mt2021 p {
+        font-size: 17px;
+    }
+
+    .h7 {
+        font-size: 18px;
+    }
+
+    .h8 {
+        font-size: 16px;
+    }
+
+    .h9 {
+        font-size: 14px;
+    }
+
+    .h10 {
+        font-size: 13px;
+    }
+
+    .h11 {
+        font-size: 12px;
+    }
+
+    .h12 {
+        font-size: 11px;
+    }
+
+    @media (max-width:767.98px) {
+        .mt2021 .mt2021 h1 {
+            font-size: 30px;
+        }
+
+        .mt2021 .mt2021 h2 {
+            font-size: 25px;
+        }
+
+        .mt2021 .mt2021 h3 {
+            font-size: 25px;
+        }
+
+        .mt2021 .mt2021 h4 {
+            font-size: 22px;
+        }
+
+        .mt2021 .mt2021 h5 {
+            font-size: 18px;
+        }
+
+        .mt2021 .mt2021 h6 {
+            font-size: 17px;
+        }
+
+        .mt2021 .mt2021 p {
+            font-size: 17px;
+        }
+
+        .h7 {
+            font-size: 16px;
+        }
+
+        .h8 {
+            font-size: 15px;
+        }
+
+    }
+
+    @media (max-width:480px) {
+        .mt2021 h1 {
+            font-size: 25px;
+        }
+
+        .mt2021 h2 {
+            font-size: 20px;
+        }
+
+        .mt2021 h3 {
+            font-size: 20px;
+        }
+
+        .mt2021 h4 {
+            font-size: 18px;
+        }
+
+        .mt2021 h5 {
+            font-size: 17px;
+        }
+
+        .mt2021 h6 {
+            font-size: 14px;
+        }
+
+        .mt2021 p {
+            font-size: 14px;
+        }
+
+        .h7 {
+            font-size: 15px;
+        }
+
+        .h8 {
+            font-size: 14px;
+        }
+
+    }
