--- a/faq.css
+++ b/faq.css
@@ -1,250 +1,217 @@
- 
-        /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ FAQs @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-        /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ FAQs @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-        html {
-            scroll-behavior: smooth;
-        }
+   /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ FAQs @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
+   html {
+    scroll-behavior: smooth;
+}
 
-        p {
-            padding: 0;
-            letter-spacing: 0.02em;
-            text-align: justify;
-        }
+p {
+    padding: 0;
+    letter-spacing: 0.02em;
+    text-align: justify;
+}
 
-        .faqs ul,
-        .faqs ol {
-            font-size: 14px;
-            text-align: justify;
-            padding-left: 20px;
-        }
+.faqs ul,
+.faqs ol {
+    font-size: 14px;
+    text-align: justify;
+    padding-left: 20px;
+}
 
-        .faqs ul {
-            list-style-type: disc;
-        }
+.mt2021 .faqs ul {
+    list-style-type: disc;
+}
 
-        .faqs .nav>li>a {
-            padding: 15px;
-            font-weight: 500;
-            text-align: left;
-        }
+.faqs .nav>li>a {
+    padding: 15px;
+    font-weight: 500;
+    text-align: left;
+}
 
-        .faqs ol {
-            list-style-type: auto;
-        }
+.mt2021 .faqs ol {
+    list-style-type: auto;
+}
 
-        .text-red {
-            color: red;
-        }
+.text-red {
+    color: red;
+}
 
 
 
-        .panel-title a:after {
-            font-family: "Glyphicons Halflings";
-            content: "\e114";
-            float: right;
-            margin-left: 15px;
-        }
+.mt2021 .panel-title a:after {
+    font-family: FontAwesome;
+    content: "\f106";
+    float: right;
+    margin-left: 15px;
+}
 
-        .panel-title a.collapsed:after {
-            content: "\e080";
-        }
-
-
-        .panel-title>a {
-            display: block;
-            color: var(--black);
-        }
-
-        .panel-title>a:hover {
-            color: var(--black);
-        }
-
-        .faqs p a {
-            color: #afcad6 !important;
-            font-weight: 600;
-        }
-
-        .faqs p a:hover {
-            animation: pulse;
-            animation-duration: 1s;
-        }
-
-        @keyframes pulse {
-            0% {
-                color: #6397c9;
-            }
-
-            25% {
-                color: #45a5d1;
-            }
-
-            50% {
-                color: #6397c9;
-            }
-
-            100% {
-                color: #45a5d1;
-            }
-        }
-
-        .faqs nav ul {
-            padding: 0;
-            background-color: #4b5055;
-        }
-
-        .faqs nav ul li {
-            border-bottom: 1px solid #555a60;
-        }
+.mt2021 .panel.active .panel-title a:after {
+    content: "\f107";
+}
 
 
+.mt2021 .panel-title>a {
+    display: block;
+    color: var(--black);
+}
 
-        .faqs nav ul li {
-            position: relative;
-        }
+.mt2021 .panel-title>a:hover {
+    color: var(--black);
+}
 
-        .faqs nav ul li a {
-            color: white !important;
-            transition: all ease 1s;
-        }
+.faqs p a {
+    color: #afcad6 !important;
+    font-weight: 600;
+}
 
-        .faqs nav ul li a:hover {
-            background-color: transparent;
-        }
+.faqs p a:hover {
+    animation: pulse;
+    animation-duration: 1s;
+}
 
-        .faqs nav ul li a:focus {
-            background-color: #6c88a2;
-            -webkit-transition: opacity .2s;
-            transition: opacity .2s;
-        }
+@keyframes pulse {
+    0% {
+        color: #6397c9;
+    }
 
-        .faqs .panel-default>.panel-heading {
-            transition: all ease 1s;
-        }
+    25% {
+        color: #45a5d1;
+    }
 
-        .faqs .panel-default>.panel-heading:focus-within {
-            animation: panel-pulse;
-            animation-duration: 1s;
-        }
+    50% {
+        color: #6397c9;
+    }
 
-        @keyframes panel-pulse {
-            25% {
-                background-color: #ddd8d8;
-                -webkit-transition: opacity .4s;
-                transition: opacity .4s;
-            }
+    100% {
+        color: #45a5d1;
+    }
+}
 
-            100% {
-                background-color: #fff;
-                -webkit-transition: opacity .8s;
-                transition: opacity .8s;
-            }
-        }
+.faqs nav ul {
+    padding: 0;
+    background-color: #4b5055;
+}
 
-        .faqs nav ul li.active::before {
-            content: '';
-            display: block;
-            top: 0;
-            right: 0px;
-            left: 0px;
-            height: 100%;
-            width: 5px;
-            background-color: #6c88a2;
-            -webkit-transition: opacity .2s;
-            transition: opacity .2s;
-            position: absolute;
-        }
+.faqs nav ul li {
+    border-bottom: 1px solid #555a60;
+}
 
 
 
-        .faqs table th {
-            font-size: 14px;
-            font-family: 'Montserrat';
-            font-weight: 500;
-        }
-
-        .faqs table td {
-            font-size: 14px;
-            font-family: 'Montserrat';
-        }
-
-
-        /* .affix {
-            top: 20px;
-        }
-
-        .affix-top {
-            position: absolute;
-        }
-
-        .affix-bottom {
-            position: absolute;
-        } */
-        .faqs .navbar {
-            position: -webkit-sticky;
-            /* position: sticky; */
-            top: 20px;
-            width: 280px;
-            float: left;
-        }
+.faqs nav ul li {
+    position: relative;
+}
 
 
 
-        .ring-iframe {
-            width: 100%;
-            height: 350px;
-        }
-
-        /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Header @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-        .page-header {
-            padding-bottom: 0px;
-            margin: 0px;
-            border-bottom: 0px;
-        }
-
-        .panel {
-            margin-bottom: 0px;
-            background-color: transparent;
-            /* border: 0px; */
-            border-radius: 0px;
-            -webkit-box-shadow: none;
-            box-shadow: none;
-        }
-
-        .panel-body:after {
-            clear: none;
-        }
 
 
+.faqs .panel-default>.panel-heading {
+    transition: all ease 1s;
+}
 
-        @media (min-width: 768px) {
+.faqs .panel-default>.panel-heading:focus-within {
+    animation: panel-pulse;
+    animation-duration: 1s;
+}
 
-            /* .col-md-4 {
-                width: 16.66667%;
-            }
+@keyframes panel-pulse {
+    25% {
+        background-color: #ddd8d8;
+        -webkit-transition: opacity .4s;
+        transition: opacity .4s;
+    }
 
-            .col-md-16 {
-                width: 66.66667%;
-            } 
-            .col-sm-8 {
-                width: 33.33333%;
-            }
+    100% {
+        background-color: #fff;
+        -webkit-transition: opacity .8s;
+        transition: opacity .8s;
+    }
+}
 
-            .col-sm-16 {
-                width: 66.66667%;
-            }*/
+.faqs nav ul li a {
+    color: white !important;
+    transition: all ease 1s;
+}
 
-        }
+.faqs nav ul li a:hover {
+    background-color: transparent;
+}
 
-        @media (min-width: 992px) {
-            .left-space-300 {
-                margin-left: 300px;
-            }
-        }
+.faqs nav ul li a:active {
+    background-color: transparent;
+}
+
+.faqs nav ul li a:focus-within {
+    animation: nav-pulse;
+    animation-duration: 1s;
+}
+
+@keyframes nav-pulse {
+    25% {
+        background-color: #555a60;
+        -webkit-transition: opacity .4s;
+        transition: opacity .4s;
+    }
+
+    100% {
+        background-color: #6c88a2;
+        -webkit-transition: opacity .8s;
+        transition: opacity .8s;
+    }
+}
+
+.faqs nav ul li a.selected::before {
+    content: '';
+    display: block;
+    top: 0;
+    right: 0px;
+    left: 0px;
+    height: 100%;
+    width: 5px;
+    background-color: #6c88a2;
+    -webkit-transition: opacity .2s;
+    transition: opacity .2s;
+    position: absolute;
+    z-index: 3;
+}
 
 
-        @media (min-width: 1200px) {
 
-            .container {
-                width: 1200px;
-            }
-        }
+
+.faqs table th {
+    font-size: 14px;
+    font-family: 'Montserrat';
+    font-weight: 500;
+}
+
+.faqs table td {
+    font-size: 14px;
+    font-family: 'Montserrat';
+}
+
+
+
+.faqs .navbar {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 120px;
+    width: 280px;
+    float: left;
+}
+
+
+
+.ring-iframe {
+    width: 100%;
+    height: 350px;
+}
+
+.mt2021 .panel-body:after {
+    clear: none;
+}
+
+
+@media (min-width: 992px) {
+    .left-space-300 {
+        margin-left: 300px;
+    }
+}
