--- a/font-style.css
+++ b/font-style.css
@@ -83,31 +83,31 @@
 }
 
 @media (max-width:767.98px) {
-    .mt2021 .mt2021 h1 {
+    .mt2021 h1 {
         font-size: 30px;
     }
 
-    .mt2021 .mt2021 h2 {
+    .mt2021 h2 {
         font-size: 25px;
     }
 
-    .mt2021 .mt2021 h3 {
+    .mt2021 h3 {
         font-size: 25px;
     }
 
-    .mt2021 .mt2021 h4 {
+    .mt2021 h4 {
         font-size: 22px;
     }
 
-    .mt2021 .mt2021 h5 {
+    .mt2021 h5 {
         font-size: 18px;
     }
 
-    .mt2021 .mt2021 h6 {
+    .mt2021 h6 {
         font-size: 17px;
     }
 
-    .mt2021 .mt2021 p {
+    .mt2021 p {
         font-size: 17px;
     }
 
