--- a/font-style.css
+++ b/font-style.css
@@ -26,7 +26,10 @@
 .mt2021 .h9,
 .mt2021 .h10,
 .mt2021 .h11,
-.mt2021 .h12 {
+.mt2021 .h12,
+.mt2021 .h13,
+.mt2021 .h14,
+.mt2021 .h15 {
     font-family: 'Montserrat';
 }
 
@@ -80,6 +83,15 @@
 
 .mt2021 .h12 {
     font-size: 11px;
+}
+.mt2021 .h13 {
+    font-size: 10px;
+}
+.mt2021 .h14 {
+    font-size: 9px;
+}
+.mt2021 .h15 {
+    font-size: 8px;
 }
 
 @media (max-width:767.98px) {
